[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/GreyLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/ResourcePickers/Characters/EventPart_CharacterJoinSettings.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/ResourcePickers/ResourcePickerMenu.tscn" type="PackedScene" id=3]

[node name="CharacterJoinSettings" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 297.0
margin_bottom = 24.0

[node name="Label" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Animation:"

[node name="AnimationPicker" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 74.0
margin_top = 1.0
margin_right = 168.0
margin_bottom = 23.0

[node name="Label2" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 172.0
margin_top = 5.0
margin_right = 219.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Length:"

[node name="AnimationLength" type="SpinBox" parent="HBoxContainer"]
margin_left = 223.0
margin_right = 297.0
margin_bottom = 24.0
step = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer1" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 297.0
margin_bottom = 52.0

[node name="Label" parent="HBoxContainer1" instance=ExtResource( 1 )]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Z-index:"

[node name="Z_Index" type="SpinBox" parent="HBoxContainer1"]
margin_left = 56.0
margin_right = 130.0
margin_bottom = 24.0
min_value = -100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}
